--- a/_posts/2020-12-03-wol-part-1.md
+++ b/_posts/2020-12-03-wol-part-1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Working Out Loud - Part 1"
 date:   2020-12-02 21:09:06 +0100
-categories: blog
+categories: wol
 ---
 About two weeks I and four other members we finished our first "Working Out Loud" circle.
 
