--- a/_posts/2020-12-03-wol-part-1.md
+++ b/_posts/2020-12-03-wol-part-1.md
@@ -42,4 +42,4 @@ and the second one was Twitter. I posted a short message to the main Slack chann
 About a week later I had five people who were interested in starting a circle and shortly after we planned our first meeting.
 
 # What's to come
-In the second part I'll get into the details on how our meetings went, what I learned and what else the WOL circle did for me.
+In [the second part]({{ site.baseurl }}{% link _posts/2020-12-11-wol-part-2.md %}) I'll get into the details on how our meetings went, what I learned and what else the WOL circle did for me.
