Typos fixed. Thanks Avi :)

--- a/_posts/2020-12-11-wol-part-2.md
+++ b/_posts/2020-12-11-wol-part-2.md
@@ -22,12 +22,12 @@ So my goal for the twelve weeks with the Circle was to improve my query tuning s
 ## The other members
 Forming a Circle as a single person is quite hard, so I went to look for folks to join the cause via a Tweet and a short message on the Software Crafters Slack.
 
-Two weeks after this message five people (of whom in the end four stayed on) had answered the call. A lead architect from Israel, a UX expert from and an Agile Coach from Germany as well as a Psychologist from Belgium.
+Two weeks after this message five people (of whom in the end four stayed on) had answered the call. A lead architect from Israel, a UX expert and an Agile Coach from Germany as well as a Psychologist from Belgium.
 
 The goals of the other WOLers were - that's me paraphrasing - "become more self secure and be taken more seriously", "promoting a more human way of therapy", "improve communication skills", "improve a website and blog for a specific software development topic".
 
 Age wise we were between 25 and 50 (dangerous guessing work here ;) )
-Four of us were employed with one person being their on company.
+Four of us were employed with one person being their own company.
 
 ## Meetings
 Over the course of three months the group met each week for about an hour to exchange their progress and work together on concrete tasks
@@ -46,7 +46,7 @@ This was not caused by the tasks being to large to start with, but rather by us 
 ## Outcome
 ### My goal
 Did I reach my goal and improve my SQL tuning skills? The answer is a clear "yes, but".
-I continuously worked on the topic (and keep doing sow now). I managed to read through a book and am working on a second one.
+I continuously worked on the topic (and keep doing so now). I managed to read through a book and am working on a second one.
 
 I even managed to apply some of the learnings at work already.
 
@@ -66,4 +66,4 @@ I even got back into blogging :)
 ## What's to come
 In a few days the Circle meets again and we will reflect on the first few weeks we spent _without_ talking to each other regularly.
 
-The experience as a whole was so positive that I will take part or start another WOL Circle at some point in 2021. I don't about the topic yet, but whatever I'll choose I know that the other members will help me to "keep at it".
+The experience as a whole was so positive that I will take part or start another WOL Circle at some point in 2021. I don't know the topic yet, but whatever I'll choose I know that the other members will help me to "keep at it".
