Pflichtparameter mit Standardwerten in Powershell-Skripten; Sprachtags eingefuehrt

--- a/_posts/2020-12-11-wol-part-2.md
+++ b/_posts/2020-12-11-wol-part-2.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Working Out Loud - Part 2"
 date:   2020-12-11 08:12:00 +0100
-categories:  wol
+categories:  wol en
 ---
 # Working Out Loud - Part 2
 After working presenting some background in [part one of this series]({{ site.baseurl }}{% link _posts/2020-12-03-wol-part-1.md %}), today I'll give you the actual experiences I had during the circle meetings.
