--- a/_posts/2022-04-09-adrs.md
+++ b/_posts/2022-04-09-adrs.md
@@ -32,10 +32,10 @@ The affected `ExchangePartnerMaintenanceController` is addressed with the base U
 
 ## What's new
 
-Adding the configuration via `HTTP-POST` operation (`<host>/api/path/maintenance/exchangepartner/{id}/addReleation`) corresponds to the REST standard.
+Adding the configuration via `HTTP-POST` operation `<host>/api/path/maintenance/exchangepartner/{id}/addReleation` corresponds to the REST standard.
 However, removing it currently requires more data, which is why it cannot be implemented with `HTTP-DELETE`, as `DELETE` does not accept any additional parameters.
 
-To stay as close as possible to the existing URL scheme I implemented the action as `POST` ((`<host>/api/path/maintenance/exchangepartner/{id}/removeRelation`)).
+To stay as close as possible to the existing URL scheme I implemented the action as `POST` `<host>/api/path/maintenance/exchangepartner/{id}/removeRelation`.
 
 ## The problem
 
@@ -49,7 +49,7 @@ For this case, for the first time, I wrote an _Architecture Decision Record_ and
 
 In [Design It](https://www.buecher.de/shop/entwurf/design-it/keeling-micahel/products_products/detail/prod_id/45641585/) Michael Keeling writes about ADRs:
 
-> Capture architecture design decisions as they are made using a lightweight, text-based template.
+> Capture architecture design decisions as they are made using a lightweight, text-based template.[...]
 > Retaining a history of decisions provides context for the current architecture relative to its evolution.
 
 I then added the Markdown file together with the code, as described above.
@@ -69,7 +69,7 @@ The External Gateway (GW) will be extended with the possibility that each depart
 activate contacts that are appropriate for them.
 
 For this, the GW must implement two new methods for activation and deactivation.
-While the activation actually inserts a new row in the DB and thus corresponds to the `POST
+While the activation actually inserts a new row in the DB and thus corresponds to
 the `POST` verb, the deactivation deletes a row and should actually be a `DELETE`.
 
 ## Decision
