World Cafe und Tag 1 Teil 1

--- a/de/_posts/2022-08-28-socrates-2022.md
+++ b/de/_posts/2022-08-28-socrates-2022.md
@@ -44,22 +44,43 @@ Schon bei dieser ersten Runde gab es viele kleine Hallos und einige wenige herzl
 
 Zur Einstimmung fand auch diesmal wieder ein "World Cafe" am Vorabend der eigentlichen Konferenz statt.
 
-Nach einer kurzen Vorabinfo ging es in die Tagungsraeume an die Gruppentische. 
+Nach einer kurzen Vorabinfo ging es in die Tagungsraeume an die Gruppentische.
+
 Als einer der "Table-Hosts" uebernahm ich die Aufgabe, die wechselndeln Gruppen am Tisch durch die Beantwortung der drei Leitfragen zu fueren:
 
 1. Was bedeutet die SoCraTes fuer dich?
-2. a
-3. b
+2. Wie machst du das beste aus der Zeit mit so vielen Software Craftern in deiner Naehe?
+3. Was willst du tun, damit das was hier passiert, sich auch woanders positiv auswirkt?
 
 Es schien mir, dass alle drei Frage am Ende immer zu Antworten führten, die als gemeinsamen Nenner hatten, wie wunderbar die Konferenz durch alle Anwesenden gestaltet werden wuerde. Ein enormes Gemeinschaftsgefuehl.
 
-To me it seemed that all three questions - even though they should have elicited different answers - led to a conversation about how the community and everyone present would be going to make this a great unconference.
+Nach der Anreise und einer laengeren Unterhaltung beim Abendessen, nahm ich dann an keiner der Abendsessions mehr Teil, der Akku war einfach leer.
 
-###
-
-## Abend-Sessions
+Auf dem Weg zu meinem Zimmer sah ich dann aber doch noch einen Kontrast, den es so wohl auf keiner anderen Tech-Konferenz gibt. In einem der Raeume, sassen ca. 20 Leute entspannt im Kreis und uebten sich in einer Achtsamkeitsmeditation. Unter dem Vordach desselben Raums hockten zehn weitere Leute um drei Laptops und waren mit Code Katas beschaeftigt.
 
 ## Tag 1
+
+Nach etwas Fruehsport und einem ausgiebigen Fruehstueck entschied ich, dass ich am ersten Tag keine eigene Session anbieten wuerde.
+
+Die Bei knappen 60 Sessions am Tag fiel auch diesmal die Auswahl nicht leicht. Allerdings war es einfacher als in den Jahren zuvor, da es auch Themen gab, die ich dieses Jahr explizit nicht behandeln wollte - zumindest nicht auf der SoCraTes.
+
+Ich besuchte am ersten Tag
+
+- Note taking and knowledge management
+- 5 minute journal
+- Dedicated tester - How could this be effective
+- How to become an expert develper
+- Becoming a software engineer
+
+Von der Session ueber Notizen und Wissensmanagement habe ich nicht viel mitgenommen. Das eingetzte Tool [Obsidian](https://obsidian.md) hatte ich irgendwann schon mal gesehen.
+Ich verlies zwar die Session nach kurzer Zeit, machte mich aber daran das Tool runterzuladen und dann erneut anzutesten.
+
+Aktuell setze ich es an der Arbeit fuer strukturierte Notizen ein.
+
+Das "5 minute journal" ist ein interessantes Konzept, fuer alle, die Notizen in Tagebuchform fuehren wollen, aber ohne grossen Zeitaufwand. Andreas war so nett uns seine Variante des 5MJ zu erlaeutern.
+
+Einen Teil davon habe ich fuer mein Bullet-Journal uebernommen.
+
 
 ### Vom SME zum Entwickler
 
@@ -68,3 +89,12 @@ To me it seemed that all three questions - even though they should have elicited
 ## Tag 2
 
 ## Der Morgen danach
+
+
+
+
+/////
+
+To me it seemed that all three questions - even though they should have elicited different answers - led to a conversation about how the community and everyone present would be going to make this a great unconference.
+
+###
