--- a/de/_posts/2022-08-28-socrates-2022.md
+++ b/de/_posts/2022-08-28-socrates-2022.md
@@ -69,29 +69,96 @@ Ich besuchte am ersten Tag
 - Note taking and knowledge management
 - 5 minute journal
 - Dedicated tester - How could this be effective
-- How to become an expert develper
+- How to become an expert developer
 - Becoming a software engineer
+
+### Zettelkasten statt Zettelwirtschaft
 
 Von der Session ueber Notizen und Wissensmanagement habe ich nicht viel mitgenommen. Das eingetzte Tool [Obsidian](https://obsidian.md) hatte ich irgendwann schon mal gesehen.
 Ich verlies zwar die Session nach kurzer Zeit, machte mich aber daran das Tool runterzuladen und dann erneut anzutesten.
 
 Aktuell setze ich es an der Arbeit fuer strukturierte Notizen ein.
 
+### Tagebuch in fuenf Minuten
+
 Das "5 minute journal" ist ein interessantes Konzept, fuer alle, die Notizen in Tagebuchform fuehren wollen, aber ohne grossen Zeitaufwand. Andreas war so nett uns seine Variante des 5MJ zu erlaeutern.
 
 Einen Teil davon habe ich fuer mein Bullet-Journal uebernommen.
 
+### Tester besser machen
+
+Was bringt es einen oder mehrere dedizierte Tester im Team zu haben? Dieser Frage gingen wir zusammen mit [Lisi Hocke](https://lisihocke.com) auf den Grund.
+
+Zwar waren mir die Argumente und Einsatzformen, die Lisi beschrieb nicht neu, aber es war gut sie mal wieder von einem Profi nahegelegt zu bekommen.
+
+Tester sollten nicht nur am Ende des Entwicklungszyklus eingesetzt werden, um die all die Fehler zu finden, die bis dahin entstanden sind. Vielmehr gilt auch hier das Prinzip, dass fruehzeitig gefunden Fehler schneller und guenstiger zu beheben sind. Daher sollten Tester, die im Team integriert sind am besten schon bei der Erstellung der Anforderungen mit eingebunden werden, um einen weiteren kritischen Blickwinkel abzudecken.
 
 ### Vom SME zum Entwickler
 
-### Tester besser machen
+Alex berichtete uns in seiner Session von DATEVs Initiative zur Rekrutierung von Entwicklern. Dort werden die Firmeneigenen Domaenenexperten zu Entwicklern umgeschult,
+bzw. Personen mit Kentnissen in aelteren Technologien an neue Programmiersprachen und 
+Techniken herangefuehrt.
+
+Die 20 Personen, die sich aktuell in diesem Programm befinden, sind fuer 18 Monate komplett freigestellt. Dieses Investment kann man sich natuerlich nur bei einer gewissen Umsatzhoehe und entsprechendem Personalpool leisten. Wenn sich dieses Programm allerdings massschneidern laesst, wird der Gewinn aus dieser Investition immens.
+
+Alleine, diesem Personenkreis einen neuen Blickwinkel auf den bisherigen Arbeitgeber zu verschaffen und ihn so noch etwas laenger auf produktive Weise an die Firma zu binden, rechtfertigt diesen Aufwand.
+
+Ein Vorschlag zur Verbesserung war, die einzelnen Lerngruppen (jeweils vier oder fuenf Personen) in den ersten Monaten einen [Working Out Loud](https://workingoutloud.com) Zirkel formen zu lassen. Diese Idee kam gut an, da DATEV sowieso schon eine interne WOL Initiative hat.
+
+Ein weiteres Problem ist, dass die Teilnehmer ihren Stand nur sehr schlecht einschaetzen koennen. Sie haben wenige bis keine Vergleichsmoeglichkeiten, welche Faehigkeiten sich auf welcher Stufe, in welcher Form sich auf ihre Taetigkeit auswirken.
+
+Ich habe dann vorgeschlagen, den Teilnehmern eine Art Bewertungsbogen an die Hand zu geben, der einem kompetenzorientierten Zeugnis in Grundschulen aehnelt.
+Diese Moeglichkeit kann allerdings nur eingeschraenkt umgesetzt werden, da die Kandidaten nicht in vergleichender Form bewertet werden duerfen. Hier hat der Betriebsrat seinen Standpunkt zurecht klar gemacht.
+Die Moeglichkeit besteht natuerlich immer noch wenn sich die Kandidaten anhand eines solchen Bogens selbst bewerten. Allerdings kostet es auch wieder Aufwand einen sinnvollen Bogen zu erarbeiten und soweit zu dokumentieren, dass die Personen sich auch korrekt einschaetzen koennen.
+
+### Wie wird man ein/e Erperte/in
+
+Ansgar ist in seinem Vortrag darauf eingegangen, wie man tatsaechlich zu ein/e Experte/in fuer Software Entwicklung (oder auf jedem anderen Gebiet) werden kann.
+
+Die schon legendaeren 10.000 Stunden auf einem Gebiet voll zu machen reicht nicht aus. Dies schafft jeder Arbeitnehmer nach knappen sechs Jahren Arbeit.
+
+Es geht darum diese 10.000 Stunden bewusst zu investieren. Das Stichwort heisst "Deliberate Practice", also _bewusstes_ Ueben. Und zwar das Ueben neuer Dinge, bei denen man sich aus seiner bisherigen Komfortzone bewegt, ohne sich zu ueberfordern.
+
+Coding Dojos und Katas muessen bewusst eingeplant und durchgefuehrt werden. Zwischen Tuer und Angel wird naemlich sonst eine "Incidental Practice" bei der das Gehirn dann nicht mehr ganz darauf eingestellt ist zu lernen. Der Erfolg faellt entsprechend schlechter aus.
 
 ## Tag 2
 
-## Der Morgen danach
+Nachdem ich an Tag 1 nur an Sessions teilgenommen hatte, wollte ich am Samstag zwei Sessions selber anbieten.
+
+Eine zum [C4 Model](https://c4model.com) und eine zu meiner Art, meine Weiterbildung zu organisieren.
+
+### Geniale oder dilettantische Verwendung des C4 Modells
+
+Ziel der C4 Model Session war hauptsaechlich eine Rueckmeldung zu einem meiner Modelle zu bekommen. Daher legte ich sie in den Vormittag. In unserer kleinen Runde bekam ich Unterstuetzung von [Markus Tacker](https://coderbyheart.com/), der diese Form der Dokumentation auch schon eingesetzt hat, aber mit Defiziten der Darstellung zu kaempfen hatte - und immer noch hat.
+
+Nach einer kurzen Einfuehrung in das Modell und der Hauptdiagramme, gingen wir mein Modell durch. Das konkrete Beispiel brachte einige Diskussionspunkte hervor. Vor allem das genaue Massschneidern von Diagrammen auf das jeweilige Publikum, stach hier heraus. Den Anwesenden, waren mehrheitlich zu viele, oder zu wenige Informationen enthalten.
+
+Als Verbesserung an meinem Modell, konnte ich dann tatsaechlich noch einen Vorschlag mitnehmen. Wir identifizierten eine etwas zu detaillierte Darstellung von Microservices im _Container_ Level des Modells. Diese sollte eher eine Stufe tiefer, bei den _Components_, angesiedelt sein.
+
+### Weiterbildung planen und analysieren
+
+Ziel dieser Session war es, den Teilnehmerinnen und Teilnehmern zu vermitteln, wie ich die letzten anderthalb Jahre mein Lernen geplant habe und wie ich die Fortschritte im Auge behalte.
+
+Ich stellte auch meinen ersten Ansatz vor wie ich diese Daten fuer meine Karriereplanung verwende/verwenden will.
+
+Ich fuehre in meinem Bullet Journal Buch darueber, was ich wie lange lerne.
+Das hilft hauptsaechlich dabei, mich nicht schlecht zu fuehlen wenn ich mal ein oder zwei Tage nichts getan habe um mich weiterzubilden. Auf den umliegenden Seiten steht dann naemlich mit ziemlicher Sicherheit, was an diesen Tagen wichtiger war - und da gibt es einiges.
+
+Es hilft aber auch dabei, die Zeiten evtl. besser zu verteilen, wenn man gerade ein bestimmtes Lernziel hat, aber seine Zeit nicht entsprechend einteilt.
+
+Aber was hilft es das alles zu notieren, wenn man die Daten nicht auswertet.
+
+Ich habe mir ein Spreadsheet erstellt, in dem ich voellig Subjektiv festgehalten habe, wie eine moegliche Weiterentwicklung fuer mich aussehen koennte. Diese basiert auf fuenf Kategorien und einer ersten Selbsteinschaetzung, die ein aktuelles Profil ergeben.
+
+Ich habe dann ueberlegt wo ich mich wahrscheinlich weiterbilden muss um entweder mehr einem Entwickler- oder einem Architektenprofil zu entsprechen.
+
+Danach habe ich ein paar (voellig subjektive) Kriterien festgelegt an denen ich einen "Stufenaufstieg" festmachen moechte.
+
+Diese Auswertung liegt aber aufgrund wichtigerer Dinge seit einem viertel Jahr auf Eis. Mein Plan ist, das nach der SoCraTes wieder anzugehen.
 
 
 
+## Post SoCraTes Blues
 
 /////
 
