--- a/de/_posts/2022-08-28-socrates-2022.md
+++ b/de/_posts/2022-08-28-socrates-2022.md
@@ -152,13 +152,20 @@ Ich habe mir ein Spreadsheet erstellt, in dem ich voellig Subjektiv festgehalten
 
 Ich habe dann ueberlegt wo ich mich wahrscheinlich weiterbilden muss um entweder mehr einem Entwickler- oder einem Architektenprofil zu entsprechen.
 
-Danach habe ich ein paar (voellig subjektive) Kriterien festgelegt an denen ich einen "Stufenaufstieg" festmachen moechte.
+Danach habe ich ein paar (voellig subjektive) Kriterien festgelegt an denen ich einen "Stufenaufstieg" pro Kategorie festmachen moechte.
 
-Diese Auswertung liegt aber aufgrund wichtigerer Dinge seit einem viertel Jahr auf Eis. Mein Plan ist, das nach der SoCraTes wieder anzugehen.
+Die Auswertung liegt aber aufgrund wichtigerer Dinge seit einem viertel Jahr auf Eis. Mein Plan ist, das nach der SoCraTes wieder anzugehen.
 
+## Kein Post SoCraTes Blues
 
+Und dann war der OpenSpace Teil der SoCraTes auch schon rum. Zwei Konferenztage wie im Nu dahin.
 
-## Post SoCraTes Blues
+Nach dem Abendessen war ich dann auch so platt, dass es fuer weitere Abendsessions nicht mehr reichte.
+
+Am naechsten Morgen war konnte ich ganz entspannt aufstehen und Fruehstuecken. Mein Zug Richtung Heimat ging erst um kurz vor zehn.
+
+Ich hatte das Glueck, dass der Post-SoCraTes Blues nicht schon jetzt einsetzte. Ich konnte zusammen mit Marion, einer Teilnehmerin, die auch in meiner Weiterbildungs-Session gewesen war, die SoCraTes und einige der Sessions nochmal Revue passieren lassen.
+Das war dann ein perfekter Ausklang fuer meine SoCraTes 2022.
 
 /////
 
