Durchgesehen und uebersetzt

--- a/_posts/2022-08-28-socrates-2022.md
+++ b/_posts/2022-08-28-socrates-2022.md
@@ -18,53 +18,152 @@ postLink: socrates2022
 
 **tl;dr**
 
-Nach vier Jahren, habe ich es endlich wieder auf die SoCraTes geschafft. Es war interessant, informativ, spannend und lustig.
+After four years, I finally made it back to the SoCraTes. It was interesting, informative, exciting and fun.
 
-## Schon ein Weilchen her
+## It's been a while
 
-Nach 2018 habe ich wieder einmal das Privileg und die Freude gehabt an einer SoCraTes in Soltau teilnehmen zu duerfen.
+After 2018, I once again had the privilege and pleasure to attend a [SoCraTes](https://www.socrates-conference.de) in Soltau.
 
-Wie alle vorherigen Mal, war es auch nach dieser langen Zeit wieder ein tolles Erlebnis mit einem ernomen Wissensaustausch, Netzwerken, das ich nicht als unangenehm empfinde und jeder Menge Spass :)
+Like all the previous times, it was again a great experience with an enormous knowledge exchange, networking (which I don't find unpleasant in this environment) and a lot of fun :)
 
-## Soltau - Heimat der Software Craft Gmeinschaft
+## Soltau - home of the Software Craft community
 
-Die SoCraTes findet nun schon seit langem zur selben Zeit am selben Ort statt: am letzten August Wochenende im Hotel Park Soltau. Man kann sagen, wir haben hier eine Art Heimat gefunden, oder zumindest ein zeitweises gemeinsames Wohnzimmer - manch eine/r wuerde behaupten Spielzimmer trifft es eher.
+SoCraTes has been held at the same time and place for a long time now: the last weekend in August at Hotel Park Soltau. You could say that we have found a kind of home here, or at least a temporary common living room - some would say playroom is more accurate.
 
-Ich bin in diesem Jahr das erste Mal mit dem Zug angereist und schon beim Ausstieg in Soltau Nord fielen mir die ersten bekannten Gesichter am Bahnsteig auf. Gemeinsam ging es dann auf den 200m langen Fussmarsch ins Hotel. Das erste erfreuliche Kribbeln machte sich breit.
+I travelled by train for the first time this year and as soon as I got off at Soltau Nord, I noticed the first familiar faces on the platform. Together we started the 200m walk to the hotel. The first pleasant tingling sensation spread.
 
-Und auch am Eingang traf ich sofort auf die, die immer hier sitzen. Ein eingespieltes Team, das fuer einen reibungslosen Checkin sorgte - diesmal auch inkl. Corona-Test.
+And at the entrance I immediately met "those who always sit here". A well-rehearsed team that ensured a smooth check-in - this time also including a Corona test.
 
-## Sichtpruefug
+## Sight check
 
-Nach dem Checkin ging es erstmal auf's Zimmer. Gepaeck ab- und Namensschild anlegen. Dann los zum ersten Rundgang, um zu sehen wer alles schon da ist und den Lageplan aus meiner Erinnerung mit der Realitaet vergleichen.
+After the check-in we went to the room. Unloaded luggage and put on the name tag. Then off to the first round to see who was already there and compare the map from my memory with reality.
 
-Schon bei dieser ersten Runde gab es viele kleine Hallos und einige wenige herzliche Begruessungen. Ich muss selbst hier erstmal wieder mit den Leuten warm werden.
+Already during this first round there were many little hellos and a few warm greetings. Even here I have to warm up to the people again.
 
 ## World Cafe
 
-Zur Einstimmung fand auch diesmal wieder ein "World Cafe" am Vorabend der eigentlichen Konferenz statt.
+To get in the mood, there was again a "World Cafe" on the evening before the actual conference.
 
-Nach einer kurzen Vorabinfo ging es in die Tagungsraeume an die Gruppentische. 
-Als einer der "Table-Hosts" uebernahm ich die Aufgabe, die wechselndeln Gruppen am Tisch durch die Beantwortung der drei Leitfragen zu fueren:
+After a short pre-information we went to the group tables in the conference rooms.
 
-1. Was bedeutet die SoCraTes fuer dich?
-2. a
-3. b
+As one of the "table hosts" I took on the task of guiding the alternating groups at the table through the answers to the three main questions:
 
-Es schien mir, dass alle drei Frage am Ende immer zu Antworten führten, die als gemeinsamen Nenner hatten, wie wunderbar die Konferenz durch alle Anwesenden gestaltet werden wuerde. Ein enormes Gemeinschaftsgefuehl.
+1. What does SoCraTes mean to you?
+2. How do you make the most of your time with so many Software Crafters around you?
+3. What do you want to do so that what happens here has a positive impact elsewhere?
 
-To me it seemed that all three questions - even though they should have elicited different answers - led to a conversation about how the community and everyone present would be going to make this a great unconference.
+It seemed to me that all three questions always ended up with answers that had as a common denominator how wonderful the conference would be made by everyone present. A tremendous sense of community.
 
-###
+After arriving and having a long chat over dinner, I didn't take part in any of the evening sessions, the battery was simply empty.
 
-## Abend-Sessions
+On the way to my room, however, I saw a contrast that probably does not exist at any other tech conference. In one of the rooms, about 20 people sat relaxed in a circle and practiced mindfulness meditation. Under the canopy of the same room, ten more people were huddled around three laptops, busy with code katas.
 
-## Tag 1
+## Day 1
 
-### Vom SME zum Entwickler
+After some early exercise and a hearty breakfast, I decided that I would not offer a session on the first day.
 
-### Tester besser machen
+With almost 60 sessions a day, the choice was not easy. However, it was easier than in previous years, as there were also topics that I explicitly did not want to cover this year - at least not at SoCraTes.
 
-## Tag 2
+On the first day I attended
 
-## Der Morgen danach
+- Note taking and knowledge management
+- 5 minute journal
+- Dedicated tester - How could this be effective?
+- How to become an expert developer
+- Becoming a software engineer
+
+### Zettelkasten instead of leaves
+
+I didn't get much out of the session on notes and knowledge management. I had already seen the tool [Obsidian](https://obsidian.md) at some point.
+I left the session after a short time, but then I downloaded the tool and tried it out again.
+
+Currently I use it at work for structured notes.
+
+### Journaling in five minutes
+
+The "5 minute journal" is an interesting concept for all those who want to keep notes in diary form, but without spending a lot of time. Andreas was kind enough to explain his version of the 5MJ.
+
+I have adopted part of it for my bullet journal.
+
+### Making testers better
+
+What is the point of having one or more dedicated testers in the team? This question was explored together with [Lisi Hocke](https://lisihocke.com).
+
+The arguments and forms of application Lisi described were not new to me, but it was good to hear them again from a professional.
+
+Testers should not only be used at the end of the development cycle to find all the bugs that have arisen up to that point. Rather, the principle that bugs found early are quicker and cheaper to fix applies here too. Therefore, testers who are integrated into the team should ideally be involved as early as the creation of the requirements in order to cover another critical perspective.
+
+### From SME to developer
+
+In his session, Alex told us about DATEV's initiative to recruit developers. The company's own domain experts are being retrained as developers, or people with knowledge of older technologies are being introduced to new programming languages and techniques.
+
+The 20 people who are currently in this programme are completely exempt from other work for 18 months. Of course, this investment can only be afforded if there is a certain level of turnover and a corresponding pool of staff. However, if this programme can be streamlined, the profit from this investment will be immense.
+
+The mere fact of giving this group of people a new perspective on their current employer and thus binding them to the company in a productive way for a little longer justifies this effort.
+
+One suggestion for improvement was to have the individual learning groups (four or five people each) form a [Working Out Loud](https://workingoutloud.com) circle in the first few months. This idea was well received, as DATEV already has an internal WOL initiative.
+
+Another problem is that the participants have a very poor idea of where they stand. They have little or no way of comparing which skills have an which impact on the work, at what level and in what form.
+
+I suggested that the participants be given a kind of assessment sheet similar to a competency-based report card in primary schools.
+However, this possibility can only be implemented to a limited extent, as candidates may not be assessed in a comparative way. Here the works council has rightly made its position clear.
+Of course, it is still possible for candidates to evaluate themselves on the basis of such a questionnaire. However, it would cost a lot of time and effort to draw up a meaningful questionnaire and to document it in such a way that the people can assess themselves correctly.
+
+### How to become an expert
+
+In his presentation Ansgar talked about how to actually become an expert in software development (or any other field).
+
+Completing the legendary 10,000 hours in one field is not enough. Any employee can do this after just under six years of work.
+
+It is about investing these 10,000 hours consciously. The keyword is "deliberate practice". And that means practising new things that take you out of your previous comfort zone without overwhelming you.
+
+Coding dojos and katas have to be planned and carried out consciously. Otherwise it becomes an "incidental practice" where the brain is no longer fully attuned to learning. The success is correspondingly worse.
+
+## Day 2
+
+After I had only participated in sessions on day 1, I wanted to offer two sessions myself on Saturday.
+
+One on the [C4 Model](https://c4model.com) and one on my way of organising my learning.
+
+### Ingenious or amateurish use of the C4 Model
+
+The aim of the C4 Model session was mainly to get feedback on one of my models. Therefore I scheduled it in the morning. In our small group I got support from [Markus Tacker](https://coderbyheart.com/), who has also used this form of documentation, but has struggled - and still does - with deficits in the presentation.
+
+After a short introduction to the model and the main diagrams, we went through my model. The concrete example brought up some discussion points. Especially the exact tailoring of diagrams to the respective audience stood out. For the majority of those present, there was too much or too little information.
+
+As an improvement to my model, I was actually able to take away a suggestion. We identified a somewhat too detailed representation of microservices in the _container_ level of the model. This should rather be located one level lower, at the _Components_.
+
+### Planning and analysing learning
+
+Here I wanted to share with the participants how I have planned my learning over the last year and a half and how I keep track of progress.
+
+I also presented my first approach on how I use/will use this data for my career planning.
+
+I keep a record in my bullet journal of what I study and for how long.
+This mainly helps me not to feel bad if I haven't done anything for a day or two to further my education. On the surrounding pages you can almost certainly see what was more important on those days - and there is a lot.
+
+It also helps to distribute the time better if you have a certain learning goal but don't manage your time accordingly.
+
+But what's the point of writing it all down if you don't evaluate the data?
+
+I have created a spreadsheet in which I have recorded, completely subjectively, what a possible further development might look like for me. This is based on five categories and an initial self-assessment, which give a current profile.
+
+I then considered where I would probably need to develop further in order to fit either a developer or an architect profile.
+
+After that I defined some (completely subjective) criteria on which I would like to base a "step up" per category.
+
+However, the evaluation has been on hold for a quarter of a year due to more important things. My plan is to tackle it again after the SoCraTes.
+
+## No post SoCraTes Blues
+
+And then the OpenSpace part of the SoCraTes was already over. Two conference days went by in a flash.
+
+After dinner I was so exhausted that I didn't have enough time for any more evening sessions.
+
+The next morning I was able to get up and have breakfast in a relaxed way. My train back home didn't leave until shortly before ten.
+
+I was lucky that the post-SoCraTes blues didn't set in already. I was able to review the SoCraTes and some of the sessions with Marion, a participant who had also been in my training session.
+This was a perfect finale for my SoCraTes 2022.
+
+
+Translated with www.DeepL.com/Translator (free version)
