--- a/_posts/2022-08-28-socrates-2022.md
+++ b/_posts/2022-08-28-socrates-2022.md
@@ -1,5 +1,5 @@
 ---
-layout: draft
+layout: post
 title:  "SoCraTes 2022 - Finally back in Soltau"
 date:   2022-09-05 17:21:00 +0100
 categories: conference software craft 
