--- a/_posts/2022-08-28-socrates-2022.md
+++ b/_posts/2022-08-28-socrates-2022.md
@@ -87,7 +87,7 @@ I have adopted part of it for my bullet journal.
 
 ### Making testers better
 
-What is the point of having one or more dedicated testers in the team? This question was explored together with [Lisi Hocke](https://lisihocke.com).
+What is the point of having one or more dedicated testers in the team? This question was explored together with [Lisi Hocke](https://www.lisihocke.com).
 
 The arguments and forms of application Lisi described were not new to me, but it was good to hear them again from a professional.
 
