--- a/de/_posts/2022-08-28-socrates-2022.md
+++ b/de/_posts/2022-08-28-socrates-2022.md
@@ -87,7 +87,7 @@ Einen Teil davon habe ich fuer mein Bullet-Journal uebernommen.
 
 ### Tester besser machen
 
-Was bringt es einen oder mehrere dedizierte Tester im Team zu haben? Dieser Frage gingen wir zusammen mit [Lisi Hocke](https://lisihocke.com) auf den Grund.
+Was bringt es einen oder mehrere dedizierte Tester im Team zu haben? Dieser Frage gingen wir zusammen mit [Lisi Hocke](https://www.lisihocke.com) auf den Grund.
 
 Zwar waren mir die Argumente und Einsatzformen, die Lisi beschrieb nicht neu, aber es war gut sie mal wieder von einem Profi nahegelegt zu bekommen.
 
